@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-31T02:05:46Z",
+  "timestamp" : "2022-10-31T08:29:56Z",
   "count_outdated" : 2544,
   "uniques_outdated" : 670,
-  "count" : 2598,
-  "uniques" : 698,
+  "count" : 2599,
+  "uniques" : 699,
   "clones" : [
     {
       "timestamp": "2022-10-17T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 5, 7 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
