@@ -1,5 +1,5 @@
 {
-  "count": 54,
+  "count": 55,
   "uniques": 15,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-30T00:00:00Z",
       "count": 7,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
